--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,11 +17,12 @@ body{
 .logo{
    text-align: left;
    color: #E8EAF6;
-   padding-top: 0.5%;
+   margin-top: 10px;
    width: 20%;
    float: left;
    font-family: 'Raleway', sans-serif;
-   margin-left: 1%;
+   margin-left: 10px;
+   font-size: 20px;
 }
 
 #main-container{
@@ -83,6 +84,7 @@ body{
 	left: 0;
 	top: 0;
 	width: 100%;
+  height: 40px;
 	z-index: 1;
 	cursor: default;
 }
@@ -132,9 +134,47 @@ body{
 	cursor: default;
 }
 
+
+#nav li {
+	display: inline-block;
+	margin-left: 0.80em;
+	margin-right: 0.80em;
+}
+
+#nav a {
+	position: relative;
+	display: block;
+	/*color: #ffffff;*/
+	text-decoration: none;
+	outline: 0;
+}
+
+#nav a:hover {
+	color: #fff !important;
+}
+
+.halfhover:before{
+	content:"";
+	backgroud:#6666ff;
+	transition-duration: 0.3s;
+	position:absolute;
+	bottom:-5px;
+	width:0;
+	height:
+	3px;
+}
+
+.halfhover:hover:before{
+	background:#6666ff;
+	width:100%;
+}
+
+
 .menu-button{
   display: float;
-  margin-left: 97%;
+  margin-top:5px;
+  float: right;
+
 }
 
 .login {
