--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,7 +5,7 @@
     </div>
   </a>
   <!-- Right aligned menu below button -->
-  {{#unless menuButton}}
+  {{#unless noMenuButton}}
   <div class="menu-button">
     <button id="demo-menu-lower-right"
             class="mdl-button mdl-js-button mdl-button--icon">
