--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,9 +78,8 @@ body{
   }
 
 #nav {
-	background-color: #000066;
+	background-color: #5C6BC0;
 	text-align: left;
-	position: fixed;
 	left: 0;
 	top: 0;
 	width: 100%;
@@ -89,51 +88,22 @@ body{
 	cursor: default;
 }
 
-	#nav li {
-		display: inline-block;
-		margin-left: 0.80em;
-		margin-right: 0.80em;
-	}
 
-	#nav a {
-		position: relative;
-		display: block;
-		/*color: #ffffff;*/
-		text-decoration: none;
-		outline: 0;
-	}
-
-		#nav a:hover {
-			color: #fff !important;
-		}
-
-  	    .halfhover:before{
-  	    	content:"";
-  	    	backgroud:#6666ff;
-  	    	transition-duration: 0.3s;
-  	    	position:absolute;
-  	    	bottom:-5px;
-  	    	width:0;
-  	    	height:
-  	    	3px;
-  	    }
-
-  		.halfhover:hover:before{
-  			background:#6666ff;
-  			width:100%;
-  	}
-
-#nav {
-	background-color: #5C6BC0;
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	z-index: 1;
-  color: #ffffff;
-	cursor: default;
+.halfhover:before{
+	content:"";
+	backgroud:#6666ff;
+	transition-duration: 0.3s;
+	position:absolute;
+	bottom:-5px;
+	width:0;
+	height:
+	3px;
 }
 
+.halfhover:hover:before{
+	background:#6666ff;
+	width:100%;
+}
 
 #nav li {
 	display: inline-block;
@@ -181,4 +151,8 @@ body{
 	font-family: 'Open Sans', sans-serif;
 	text-decoration:none;
 	color: black;
+}
+
+.material-icons{
+  color: white;
 }
