--- a/views/patient.hbs
+++ b/views/patient.hbs
@@ -9,8 +9,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Fira+Mono' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<!--load my style sheet-->
-	<link rel='stylesheet' href='/stylesheets/style-register.css'/>
   <link rel='stylesheet' href='/stylesheets/style.css'/>
+  <link rel='stylesheet' href='/stylesheets/patientProfile.css' />
 
 	<!-- material -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -20,28 +20,31 @@
   </head>
   <body>
     {{> navbar }}
-    <h1>{{patient.slug}}</h1>
 
-  	<!-- <div id = "login-container">
-	  	<div id = "form-container">
-	  		<h3 class="title"> Login </h3>
-	  		<form method="post" action="/login">
-				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				  <input class="mdl-textfield__input" type="text" id="email" name="username">
-				  <label class="mdl-textfield__label" for="email">Email</label>
-				</div>
-				<div></div>
-				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				  <input class="mdl-textfield__input" type="password" id="password" name="password">
-				  <label class="mdl-textfield__label" for="password">Password</label>
-				</div>
-				<div></div>
-				{{#if unsuccesful}}
-					<div class = "error-message"> <p> Incorrect email address or password. Please try again or create a new account. <p> </div>
-				{{/if}}
-				<input class="button" type="submit" value="Login"></input>
-			</form>
-  		</div>
-  	</div> -->
+    <div class="profile-holder">
+      <div class = "profile-card">
+        <div class="demo-card-square mdl-card mdl-shadow--2dp">
+          <div class="mdl-card__title mdl-card--expand" style="background:url('/images/{{patient.gender}}.png') bottom right 2% no-repeat #5C6BC0;">
+            <h2 class="mdl-card__title-text">{{patient.firstName}} {{patient.lastName}}</h2>
+          </div>
+          <div class="mdl-card__supporting-text">
+            Condition: {{patient.condition}}
+          </div>
+          <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href = "/patient/{{patient.slug}}/create-survey">
+              Create Survey
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <!--
+    TODO for patient profile
+    create create survey button
+    loop through surveys and display results
+    -->
   </body>
 </html>
