--- a/views/create-survey.hbs
+++ b/views/create-survey.hbs
@@ -10,6 +10,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<!--load my style sheet-->
   <link rel='stylesheet' href='/stylesheets/style.css'/>
+  <link rel='stylesheet' href='/stylesheets/create-survey.css'/>
 
 	<!-- material -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -19,7 +20,72 @@
   </head>
   <body>
     {{> navbar }}
-    <h1> Create Survey Questions </h1>
 
+    <form method="POST" action="">
+      <div class="questionBoxWithHeaderAndSubmitButton">
+        <h4 id="header"> Create Survey Questions </h2>
+        <hr class="styleline" />
+        <div class="profile-holder">
+          <div class = "profile-card">
+            <div class="demo-card-square mdl-card mdl-shadow--2dp">
+              <div class="mdl-card__title mdl-card--expand" style="background:url('/images/{{patient.gender}}.png') bottom right 2% no-repeat #5C6BC0;">
+                <h2 class="mdl-card__title-text">{{patient.firstName}} {{patient.lastName}}</h2>
+              </div>
+              <div class="mdl-card__supporting-text">
+                Condition: {{patient.condition}}
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="question-box" id="question-form">
+          <div class="question-holder-row">
+            <label>Question 1: {{defaultQuestion}}</label>
+          </div>
+          <div class="button-row">
+            <div class="buttons-inner">
+              <label class="question-label">Question Text - </label><input type="text" id="add-question-text" class="question-text-input"/>
+              <input class="survey-button" type="button" value="Add Question" id="add-question-button" onClick="addInput();">
+            </div>
+          </div>
+        </div>
+        <input class="survey-button" id="create-survey-button" type="submit" value="Mail Survey"></input>
+
+      </div>
+    </form>
+    <script>
+      var count = 2;
+      var questionsBox = document.getElementById('question-form');
+      function addInput(){
+        var newQuestionRow = document.createElement("div");
+        newQuestionRow.classList.add("question-holder-row");
+        var newLabel = document.createElement("label");
+        var questionBuilderString = "Question ";
+        questionBuilderString += count;
+        questionBuilderString += " : ";
+
+        //questionBuilderString += document.getElementById('add-question-text').value;
+        count += 1;
+        newLabel.textContent = questionBuilderString;
+        newQuestionRow.appendChild(newLabel);
+
+        var newInput = document.createElement("input");
+        newInput.name = "myInputs";
+        newInput.value = document.getElementById('add-question-text').value;
+        newInput.classList.add("question-text-input");
+        newQuestionRow.appendChild(newInput);
+        // TODO ADD THE NAME TO THE TEXT FIELD OR IT WONT GET SENT TO THE BACKEND
+        questionsBox.appendChild(newQuestionRow);
+        document.getElementById('add-question-text').value = "";
+
+
+        var height = questionsBox.offsetHeight;
+        var newHeight = height + 36;
+        questionsBox.style.height = newHeight + 'px';
+
+
+      }
+
+    </script>
   </body>
 </html>
