--- a/views/create-survey.hbs
+++ b/views/create-survey.hbs
@@ -45,11 +45,11 @@
           <div class="button-row">
             <div class="buttons-inner">
               <label class="question-label">Question Text - </label><input type="text" id="add-question-text" class="question-text-input"/>
-              <input class="survey-button" type="button" value="Add Question" id="add-question-button" onClick="addInput();">
+              <input class="survey-button" type="button" value="ADD QUESTION" id="add-question-button" onClick="addInput();">
             </div>
           </div>
         </div>
-        <input class="survey-button" id="create-survey-button" type="submit" value="Mail Survey"></input>
+        <input class="survey-button" id="create-survey-button" type="submit" value="MAIL SURVEY"></input>
 
       </div>
     </form>
