--- a/public/stylesheets/patientProfile.css
+++ b/public/stylesheets/patientProfile.css
@@ -40,3 +40,31 @@
   right:0;
   cursor: pointer;
 }
+
+#painLevel{
+  font-size: 40px;
+}
+
+.outerSurveyHolder{
+  width: 100%
+}
+
+.survey-holder{
+  margin-top: 40px;
+  width: 600px;
+  display: inline-block;
+}
+.survey-card{
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+hr.styleline {
+  border: 0;
+  height: 1px;
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+}
