--- a/views/patient.hbs
+++ b/views/patient.hbs
@@ -8,14 +8,15 @@
 	<!--load font-->
 	<link href='https://fonts.googleapis.com/css?family=Fira+Mono' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-	<!--load my style sheet-->
-  <link rel='stylesheet' href='/stylesheets/style.css'/>
-  <link rel='stylesheet' href='/stylesheets/patientProfile.css' />
 
 	<!-- material -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-cyan.min.css">
 	<script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+
+  <!--load my style sheet-->
+  <link rel='stylesheet' href='/stylesheets/style.css'/>
+  <link rel='stylesheet' href='/stylesheets/patientProfile.css' />
 
   </head>
   <body>
@@ -46,7 +47,49 @@
         </div>
       </div>
     </div>
+    <br />
+    <br />
+    <h2 style="text-align: center; color: #1abc9c;">Patient Surveys</h2>
+    <hr class ="styleline">
 
+    <div class="outerSurveyHolder">
+    {{#each surveys}}
+
+      <div class="survey-holder">
+        <div class = "survey-card">
+          <div class="demo-card-square mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title mdl-card--expand" style="background: #5C6BC0;"> <!-- the style image goes here -->
+              <h2 class="mdl-card__title-text" id="painLevel">
+                {{#if this.painLevel}}
+                  Recovery level {{this.painLevel}}
+                {{else}}
+                  Recovery level TBD
+                {{/if}}
+              </h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              {{#if this.answered}}
+                <a style="color: rgba(0,0,0,.54); text-decoration:None"href="/answerSurvey/{{this.id}}">Completed</a>
+              {{else}}
+                <a style="color: rgba(0,0,0,.54); text-decoration:None"href="/answerSurvey/{{this.id}}">Incomplete</a>
+              {{/if}}
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              {{#if this.answered}}
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="/viewSurvey/{{this.id}}">
+                  View results
+                </a>
+              {{else}}
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="">
+                  Not complete
+                </a>
+              {{/if}}
+            </div>
+          </div>
+        </div>
+      </div>
+    {{/each}}
+    </div>
 
 
     <!--
