changed css and survey result page

--- a/views/survey-results.hbs
+++ b/views/survey-results.hbs
@@ -21,7 +21,10 @@
   </head>
   <body>
     {{> navbar }}
-    survey results go here
+    <!-- {{survey}} -->
+    {{#each questions}}
+      {{this.question}} {{this.answer}} <br>
+    {{/each}}
   </body>
 
 </html>
