--- a/public/stylesheets/patientProfile.css
+++ b/public/stylesheets/patientProfile.css
@@ -41,8 +41,9 @@
   cursor: pointer;
 }
 
-#painLevel{
-  font-size: 40px;
+.painLevel{
+  font-family: 'Raleway', sans-serif;
+  font-size: 30px;
 }
 
 .outerSurveyHolder{
@@ -51,13 +52,21 @@
 
 .survey-holder{
   margin-top: 40px;
-  width: 600px;
+  /*width: 600px;*/
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-bottom: 2%;
   display: inline-block;
 }
 .survey-card{
   width: 300px;
-  margin-left: auto;
-  margin-right: auto;
+}
+
+.survey-title {
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  color: #1abc9c;
+  font-size: 2rem;
 }
 
 hr.styleline {
@@ -67,4 +76,61 @@ hr.styleline {
   background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+}
+
+#main-page {
+  margin: 0 auto;
+  text-align: center;
+}
+
+#title-welcome {
+  padding: 2%;
+  font-family: 'Roboto', sans-serif;
+  margin: 0 auto;
+  text-align: center;
+  width: 20%;
+}
+
+#title-welcome h4 {
+  margin-bottom: 1%;
+}
+
+#title-welcome p {
+  font-family: 'Roboto', sans-serif;
+  color: #707B7C;
+  font-size: 1.4rem;
+}
+
+#gender-button {
+  width:60px;
+  height:60px;
+  min-width: 60px;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+#patient-name {
+  display: inline-block;
+  margin-right: 3%;
+  margin-top: 5%;
+  margin-bottom: 10%;
+}
+
+#add-button {
+  background-color: #F2F3F4;
+  width: 40px;
+  height:40px;
+  min-width: 40px;
+  color:black;
+}
+
+#add-button i {
+  color:black;
+}
+
+#surveys {
+  font-family: 'Roboto', sans-serif;
+  display: inline-block;
+  margin-right: 3%;
+  font-size: 1.8rem;
 }
