--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -11,8 +11,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 	<!--load my style sheet-->
-	<link rel='stylesheet' href='/stylesheets/dashboard.css'/>
   <link rel='stylesheet' href='/stylesheets/style.css'/>
+  <link rel='stylesheet' href='/stylesheets/dashboard.css'/>
 
 	<!-- material -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -31,7 +31,7 @@
          <i class="material-icons">add</i>
        </button>
     </div>
-    <div id = "patients">
+    <!-- <div id = "patients"> -->
       {{#each user.patients}}
       <div class = "profile-card">
       <div class="demo-card-square mdl-card mdl-shadow--2dp">
@@ -49,7 +49,7 @@
       </div>
       </div>
       {{/each}}
-    </div>
+    <!-- </div> -->
    </div>
   </body>
 </html>
