--- a/views/patient.hbs
+++ b/views/patient.hbs
@@ -28,9 +28,8 @@
           <img id="x" src="/images/x.svg"/>
         </p>
       </div>
-
     {{/if}}
-    <div class="profile-holder">
+    <!-- <div class="profile-holder">
       <div class = "profile-card">
         <div class="demo-card-square mdl-card mdl-shadow--2dp">
           <div class="mdl-card__title mdl-card--expand" style="background:url('/images/{{patient.gender}}.png') bottom right 2% no-repeat #5C6BC0;">
@@ -46,11 +45,19 @@
           </div>
         </div>
       </div>
-    </div>
-    <br />
-    <br />
-    <h2 style="text-align: center; color: #1abc9c;">Patient Surveys</h2>
-    <hr class ="styleline">
+    </div> -->
+    <div id = "main-page">
+      <div id = "title-welcome">
+        <h4 id="patient-name"> {{patient.firstName}} {{patient.lastName}} </h4>
+        <div class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" id="gender-button" style="background:url('/images/{{patient.gender}}_s.png')">
+        </div>
+        <p id="patient-cond"> {{patient.condition}} </p>
+        <hr class ="styleline">
+        <h5 id="surveys"> Surveys </h5>
+        <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" id="add-button" onclick = "window.location.href='/patient/{{patient.slug}}/create-survey'">
+          <i class="material-icons">add</i>
+        </button>
+     </div>
 
     <div class="outerSurveyHolder">
     {{#each surveys}}
@@ -59,7 +66,7 @@
         <div class = "survey-card">
           <div class="demo-card-square mdl-card mdl-shadow--2dp">
             <div class="mdl-card__title mdl-card--expand" style="background: #5C6BC0;"> <!-- the style image goes here -->
-              <h2 class="mdl-card__title-text" id="painLevel">
+              <h2 class="mdl-card__title-text" class="painLevel">
                 {{#if this.painLevel}}
                   Recovery level {{this.painLevel}}
                 {{else}}
@@ -90,7 +97,6 @@
       </div>
     {{/each}}
     </div>
-
 
     <!--
     TODO for patient profile
