--- a/views/answer-survey.hbs
+++ b/views/answer-survey.hbs
@@ -37,7 +37,7 @@
             </div>
           {{/each}}
         </div>
-        <input class="survey-button" id="create-survey-button" type="submit" value="ANSWER SURVEY"></input>
+        <input class="survey-button" id="create-survey-button" type="submit" value="SUBMIT"></input>
       </div>
     </form>
     <script>
