--- a/views/create-survey.hbs
+++ b/views/create-survey.hbs
@@ -44,7 +44,7 @@
           </div>
           <div class="button-row">
             <div class="buttons-inner">
-              <label class="question-label">Question Text - </label><input type="text" id="add-question-text" class="question-text-input"/>
+              <label class="question-label">Question : </label><input type="text" id="add-question-text" class="question-text-input"/>
               <input class="survey-button" type="button" value="ADD QUESTION" id="add-question-button" onClick="addInput();">
             </div>
           </div>
