--- a/views/thank-patient.hbs
+++ b/views/thank-patient.hbs
@@ -1,1 +1,31 @@
-Thank you for answering the survey. Your doctor will be in touch if there are any reasons for concern. 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> Thank You </title>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+	<!-- material -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-cyan.min.css">
+	<script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+
+  <!--load my style sheet-->
+  <link rel='stylesheet' href='/stylesheets/style.css'/>
+  <link rel='stylesheet' href='/stylesheets/thankyou.css'/>
+
+  </head>
+  <body>
+    <div class="container"> 
+      <hr class="styleline"> </hr> 
+      <div class="message-1"> 
+        Thank you for answering the survey.
+      </div> 
+      <div class="message-2">
+        Your doctor will be in touch if there are any reasons for concern. 
+      </div> 
+      <hr class="styleline"> </hr> 
+    </div> 
+  </body>
+
+</html>
