--- a/public/stylesheets/answer-survey.css
+++ b/public/stylesheets/answer-survey.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
+body{
+  background-color: #fafafa;
+  font-size: 15px;
+  font-family: 'Open Sans', sans-serif;
+}
+
 #header{
   font-family: 'Raleway', sans-serif;
   text-align: center;
@@ -17,13 +26,11 @@ hr.styleline {
 }
 
 .question-box{
-  font-family: 'Roboto', sans-serif;
   border-style: solid;
-  border-width: 30px 20px 30px 20px;
-  border-color: #1abc9c;
+  border-width: 2px 2px 2px 2px;
+  border-color: #9FA8DA;
   border-radius: 5px;
   height: 300px;
-  box-shadow: 5px 5px 2.5px #888888;
   position: relative;
 }
 
@@ -33,37 +40,35 @@ hr.styleline {
   margin-right: auto;
 }
 .question-holder-row{
-  font-family: 'Roboto', sans-serif;
   height: 88px;
-  font-size: 20px;
-  box-shadow: 1px 1px 1px #888888;
+  font-size: 17px;
+  box-shadow: 0.85px 0.85px 0.85px #9FA8DA;
   padding-left: 15px;
   padding-top: 30px;
   border-radius: 2px;
 }
 
 .question-label{
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .question-text-input{
   width: 700px;
-  height: 40px;
+  height: 30px;
   margin-top: 10px;
   margin-left: 15px;
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .question-number-input{
   width: 60px;
-  height: 40px;
+  height: 30px;
   margin-top: 10px;
   margin-left: 15px;
-  font-size: 18px;
+  font-size: 14px;
 }
 
-.button-row{
-  font-family: 'Raleway', sans-serif;
+/*.button-row{
   position: absolute;
   bottom: 0;
   text-align: center;
@@ -72,35 +77,68 @@ hr.styleline {
   background-color: #16a085;
   padding-top: 10px;
   padding-bottom: 10px;
-}
+}*/
 
 .survey-button{
-  font-family: 'Roboto', sans-serif;
-  margin-left: 10px;
+/*  font-family: 'Open Sans', sans-serif;
+*/  margin-left: 10px;
   padding:10px;
   box-shadow: none;
   font-size: 18px;
   border-radius:5px;
   border: none;
 }
+
+
 #add-question-button{
   background-color:#5C6BC0;
   color: white;
   cursor: pointer;
-  font-family: 'Raleway', sans-serif;
-}
+/*  font-family: 'Raleway', sans-serif;
+*/}
 
-#create-survey-button{
+/*#create-survey-button{
   cursor: pointer;
   margin-top: 30px;
   float:right;
-  width: 210px;
-  font-size: 22px;
+  width: 83px;
+  font-size: 16px;
   text-align: right;
   color: white;
   background-color: #1abc9c;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
+*/
+
+#create-survey-button{
+  margin: 2em;
+  width: 130px;
+  height: 35px;
+  font-size: 11px;
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: 1px #6666ff solid;
+  border-radius: 45px;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  float:right;
+}
+
+  #create-survey-button:hover{
+    background-color: #3F51B5;
+    box-shadow: 0px 10px 14px rgba(80, 80, 80, 0.4);
+    color: #fff;
+    border: 1px #eeeeee solid;
+  }
+
 
 .profile-holder{
   margin-top: 40px;
