--- a/views/patient.hbs
+++ b/views/patient.hbs
@@ -53,7 +53,7 @@
         </div>
         <p id="patient-cond"> {{patient.condition}} </p>
         <hr class ="styleline">
-        <h5 id="surveys"> Surveys </h5>
+        <div id="surveys"> Surveys </div>
         <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" id="add-button" onclick = "window.location.href='/patient/{{patient.slug}}/create-survey'">
           <i class="material-icons">add</i>
         </button>
@@ -66,13 +66,13 @@
         <div class = "survey-card">
           <div class="demo-card-square mdl-card mdl-shadow--2dp">
             <div class="mdl-card__title mdl-card--expand" style="background: #5C6BC0;"> <!-- the style image goes here -->
-              <h2 class="mdl-card__title-text" class="painLevel">
+              <h4 class="mdl-card__title-text pain-level">
                 {{#if this.painLevel}}
                   Recovery level {{this.painLevel}}
                 {{else}}
                   Recovery level TBD
                 {{/if}}
-              </h2>
+              </h4>
             </div>
             <div class="mdl-card__supporting-text">
               {{#if this.answered}}
