--- a/views/survey-results.hbs
+++ b/views/survey-results.hbs
@@ -5,10 +5,6 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
-	<!--load font-->
-	<link href='https://fonts.googleapis.com/css?family=Fira+Mono' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-
 	<!-- material -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-cyan.min.css">
@@ -22,9 +18,21 @@
   <body>
     {{> navbar }}
     <!-- {{survey}} -->
-    {{#each questions}}
-      {{this.question}} {{this.answer}} <br>
-    {{/each}}
+
+    <div id="result-container">
+      <div id="title">
+          Survey Result
+      </div>  
+      <hr class="styleline"> </hr>
+      <div class="questions-container"> 
+        {{#each questions}}
+            <div class="answers"> 
+              {{this.question}} 
+              <span class="style-answers"> {{this.answer}} </span>
+            </div> 
+        {{/each}}
+      </div> 
+    </div> 
   </body>
 
 </html>
